Spacing issue resolve

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -840,6 +840,18 @@ header .header-inner {
   .left-image-right-content h3 {
     font-family: "Montserrat", sans-serif;
     font-size: 1.125rem; }
+  .left-image-right-content .content-inner {
+    padding-top: 100px; }
+
+.right-image-left-content2 h3 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.125rem; }
+.right-image-left-content2 .img-relative-title-ld:hover img {
+  box-shadow: -5px 5px 0px rgba(0, 0, 0, 0.2);
+  -webkit-transition: all .2s linear;
+  -moz-transition: all .2s linear;
+  -o-transition: all .2s linear;
+  transition: all .2s linear; }
 
 .expertise-left-image .img-relative-title-ru h2 {
   bottom: -75px;
